// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hits accepts a custom className 1`] = `
<div
  className="cvi-Hits MyCustomHits"
>
  <ul
    className="cvi-Hits-list"
  >
    <li
      className="cvi-Hits-item"
    >
      <div
        id={0}
      />
    </li>
    <li
      className="cvi-Hits-item"
    >
      <div
        id={1}
      />
    </li>
    <li
      className="cvi-Hits-item"
    >
      <div
        id={2}
      />
    </li>
  </ul>
</div>
`;

exports[`Hits accepts a hitComponent prop 1`] = `
<div
  className="cvi-Hits"
>
  <ul
    className="cvi-Hits-list"
  >
    <li
      className="cvi-Hits-item"
    >
      <div
        id={0}
      />
    </li>
    <li
      className="cvi-Hits-item"
    >
      <div
        id={1}
      />
    </li>
    <li
      className="cvi-Hits-item"
    >
      <div
        id={2}
      />
    </li>
  </ul>
</div>
`;
